Added set of public transport types, changed API, updated API docs, added validation
